--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
               <td><input type="text" class="inquiry"></td>
             </tr>
         </table>
-        <p><input type="submit" value="送 信"></p>
+        <p><input type="submit" value="送信" class="button"></p>
         </form>
       </article>
     </div>
